[package]
name = "bookx"
version = "0.1.0"
authors = ["Anurag Dhadse <hello@adhadse.com>"]
edition = "2021"

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
once_cell = "1.9"
gtk-macros = "0.3.0"
strum = "0.20"
strum_macros = "0.20"
futures = "0.3"

[dependencies.gtk]
package = "gtk4"
version = "0.4.4"
features = ["v4_6"]

[dependencies.gio]
package = "gio"
version = "0.15.2"
features = ["v2_70"]

[dependencies.adw]
package = "libadwaita"
version = "0.1.1"

[dependencies.gettext-rs]
version = "0.7.0"
features = ["gettext-system"]

[dependencies.serde]
package = "serde_json"
version = "1.0.85"

[dependencies.url]
package = "url"
version = "2.3.1"

[dependencies.jsondata]
package = "jsondata"
version = "0.8.0"
