[package]
name = "bookx"
version = "0.1.0"
authors = ["Anurag Dhadse <hello@adhadse.com>"]
edition = "2021"

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
once_cell = "1.9"
gtk-macros = "0.3.0"
strum = "0.24.1"
strum_macros = "0.24.3"
futures = "0.3.28"
anyhow = "1.0.70"
rust-crypto = "0.2.36"
tracing = "0.1"
tracing-subscriber = "0.3"
relm4-macros = "0.5.1"

[dependencies.relm4]
package = "relm4"
version = "0.6.0"
features = ["libadwaita", "gnome_43"]

[dependencies.gettext-rs]
version = "0.7.0"
features = ["gettext-system"]

[dependencies.serde]
version = "1.0.159"
features = ["derive"]

[dependencies.serde_json]
package = "serde_json"
version = "1.0.91"

[dependencies.epub]
package = "epub"
version = "2.0.0"

[build-dependencies]
relm4-macros = "0.5.1"

